--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,59 @@
   text-align: center;
 }
 
+
+/* The Modal (background) */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 30%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.modal li {
+  float:left;
+}
+.mybtn{
+  color;white;
+  background-color:orange;
+}
+
+
+/* Modal Content/Box */
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  float:left;
+  border: 1px solid grey;
+  width: 80%;
+  font-size: 14px;
+  font-family: 'Roboto Slab';
+}
+
+
+/* The Close Button */
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
 .breakfastbg:hover {
   color: white;
   background-color: #f2f2f2;
@@ -96,11 +149,6 @@
 .happybg {
   background-color: #eff0f2;
   padding: 13px;
-}
-
-.happybg:hover {
-  background-color: orange;
-  color: white;
 }
 
 .partybg:hover {
