--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Slab');
-
 html, body {
-  max-width: 100%;
+  width: 100%;
   overflow-x: hidden;
 }
 
@@ -146,12 +145,14 @@ html, body {
 
 .topHead {
   text-align: center;
-  font-size: 30px;
   margin-right: auto;
   margin-left: auto;
   text-align: center;
-  background: url(../img/landing.jpg) no-repeat;
-  width: 100%;
+  background: url('../img/landing.jpg') no-repeat center;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   color: white;
 }
 
